--- a/jenkins_pipelines/data/non_MU_channels_tasks.json
+++ b/jenkins_pipelines/data/non_MU_channels_tasks.json
@@ -1,5 +1,6 @@
 {
   "_comment":  "List of minions that require specific custom channels with corresponding run_set",
+  "alma8_minion" : "build_validation_alma8_minion_build_clm",
   "alma9_minion" : "build_validation_alma9_minion_build_clm",
   "centos7_minion" : "build_validation_centos7_minion_add_iso",
   "liberty9_minion" : "build_validation_liberty9_minion_build_clm",
