--- a/jenkins_pipelines/data/non_MU_channels_tasks.json
+++ b/jenkins_pipelines/data/non_MU_channels_tasks.json
@@ -1,5 +1,5 @@
 {
   "_comment":  "List of minions that require specific custom channels with corresponding run_set",
   "centos7_minion" : "build_validation_centos7_minion_add_iso",
-  "rocky8_minion" : "build_validation_rocky8_minion_add_iso",
+  "rocky8_minion" : "build_validation_rocky8_minion_add_iso"
 }
